Fix react-modal overlay horizontal overflow

--- a/sass/blocks/_boss-modal-window.sass
+++ b/sass/blocks/_boss-modal-window.sass
@@ -340,5 +340,6 @@ $block: ".boss-modal-window"
       left: 0
       z-index: 10000
       background-color: rgba(0,0,0,.75) !important
-      overflow: auto
+      overflow-x: hidden
+      overflow-y: auto
 
